--- a/4.json.jinja
+++ b/4.json.jinja
@@ -1,7 +1,7 @@
 {
     "query": {
         "match_phrase": {
-           "title": "{{ keywords }}"
+           "title.bigrams": "{{ keywords }}"
         }
     }
 }
