--- a/6.json.jinja
+++ b/6.json.jinja
@@ -1,7 +1,8 @@
+
 {
     "query": {
         "match_phrase": {
-           "title": "{{ keywords }}"
+           "categories": "{{ keywords }}"
         }
     }
 }
