Create an evaluate script for judging features/models

--- a/5.json.jinja
+++ b/5.json.jinja
@@ -2,7 +2,9 @@
    "query": {
       "function_score": {
          "query": {
-            "match_all": {}
+            "match": {
+                "_all": "{{keywords}}"
+            }
          },
          "functions": [
             {
